# toolbox

./: .gitignore  README.md  install.sh  pyproject.toml  x.py
assets/: sync.tape
commands/: wtf.py
toolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
x/: main.py
x.egg-info/: PKG-INFO  SOURCES.txt
x/commands/: README.md  notes.md  notes.py  repos.md  repos.py  sync.md  wtf.py
x/commands/notes/: __init__.py
x/commands/sync/: README.md  __init__.py
x/commands/wtf/: README.md  __init__.py
x/utils/: ai.py  colors.py
