[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbox"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "click",
    "boto3",
    "openai",
    "requests",
    "keyring",
    "keyrings.alt",
]

[project.scripts]
x = "x.main:main"
